User is now asked before creating or updating a working day in SQLite database